fixed bugs in Auth

--- a/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/Business.storyboard
@@ -202,6 +202,16 @@
                                                                     <constraint firstAttribute="height" constant="250" id="e5m-bN-j06"/>
                                                                 </constraints>
                                                             </view>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1fY-Gx-qjH">
+                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="220" id="uPy-3P-ffP"/>
+                                                                </constraints>
+                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                                <connections>
+                                                                    <action selector="goToSelectLoactionAction:" destination="fi7-z2-hDl" eventType="touchUpInside" id="KRD-Gq-isX"/>
+                                                                </connections>
+                                                            </button>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_shadowMap" translatesAutoresizingMaskIntoConstraints="NO" id="TMg-fk-ZxK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
                                                             </imageView>
@@ -223,9 +233,12 @@
                                                             <constraint firstAttribute="bottom" secondItem="kvJ-w3-JjQ" secondAttribute="bottom" constant="18" id="AhX-fZ-tlG"/>
                                                             <constraint firstAttribute="height" constant="287" id="Fs7-m1-FCr"/>
                                                             <constraint firstItem="kvJ-w3-JjQ" firstAttribute="leading" secondItem="Bsg-QR-ATg" secondAttribute="leading" constant="20" id="Mu6-HH-jy5"/>
+                                                            <constraint firstItem="1fY-Gx-qjH" firstAttribute="leading" secondItem="Bsg-QR-ATg" secondAttribute="leading" id="PAp-Vq-jy0"/>
+                                                            <constraint firstItem="1fY-Gx-qjH" firstAttribute="top" secondItem="Bsg-QR-ATg" secondAttribute="top" id="QHW-Re-rwt"/>
                                                             <constraint firstAttribute="trailing" secondItem="kvJ-w3-JjQ" secondAttribute="trailing" constant="20" id="UIE-uw-5r5"/>
                                                             <constraint firstAttribute="trailing" secondItem="TMg-fk-ZxK" secondAttribute="trailing" id="ZuS-WD-UEc"/>
                                                             <constraint firstAttribute="bottom" secondItem="TMg-fk-ZxK" secondAttribute="bottom" id="ds8-eJ-VNe"/>
+                                                            <constraint firstAttribute="trailing" secondItem="1fY-Gx-qjH" secondAttribute="trailing" id="lq0-E3-Lof"/>
                                                             <constraint firstItem="gnQ-PP-psw" firstAttribute="leading" secondItem="Bsg-QR-ATg" secondAttribute="leading" id="q6s-am-J5U"/>
                                                             <constraint firstItem="gnQ-PP-psw" firstAttribute="top" secondItem="Bsg-QR-ATg" secondAttribute="top" id="qd0-1I-mF6"/>
                                                         </constraints>
@@ -236,14 +249,17 @@
                                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZTU-ez-WbI">
                                                                 <rect key="frame" x="20" y="4" width="335" height="120"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_addImage" translatesAutoresizingMaskIntoConstraints="NO" id="vNS-F8-5Ct">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
-                                                                    </imageView>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="soY-t0-Ixm">
                                                                         <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                                        <connections>
+                                                                            <action selector="addPhotosAction:" destination="fi7-z2-hDl" eventType="touchUpInside" id="WtE-Xr-cPK"/>
+                                                                        </connections>
                                                                     </button>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_addImage" translatesAutoresizingMaskIntoConstraints="NO" id="vNS-F8-5Ct">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
+                                                                    </imageView>
                                                                 </subviews>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <constraints>
@@ -456,10 +472,14 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dpe-tF-m8B">
                                         <rect key="frame" x="0.0" y="0.0" width="83" height="33"/>
+                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Add">
                                             <color key="titleColor" name="3FBF66"/>
                                         </state>
+                                        <connections>
+                                            <action selector="addParkingAction:" destination="fi7-z2-hDl" eventType="touchUpInside" id="fFo-RZ-0Pg"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -481,6 +501,7 @@
                         <outlet property="parkingImage" destination="vNS-F8-5Ct" id="ewE-6j-9vx"/>
                         <outlet property="parkingNameText" destination="kvJ-w3-JjQ" id="UFh-7a-hQQ"/>
                         <outlet property="perdayButton" destination="BZW-GI-zQq" id="95Q-7T-KU7"/>
+                        <outlet property="priceText" destination="Co1-9j-swu" id="jNN-Pb-xiz"/>
                         <outlet property="selectDate" destination="1Gx-5m-yzp" id="BYB-Sn-au3"/>
                         <outlet property="selectTime" destination="hqt-Au-nSY" id="wEk-Iq-xsO"/>
                     </connections>
@@ -488,6 +509,98 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I37-uT-OaW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1633" y="190"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7MG-hW-CTy">
+            <objects>
+                <viewController id="h41-t9-GHr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ghf-au-lS9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="noi-Uq-5uH" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QKB-dq-D2t">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="174"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_topShadow" translatesAutoresizingMaskIntoConstraints="NO" id="pNK-F3-8Sz">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="174"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F9C-nN-Tyn">
+                                        <rect key="frame" x="20" y="96" width="374" height="52"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLl-Ho-NLL">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="52"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Ii-0a-dof">
+                                                        <rect key="frame" x="15" y="0.0" width="346" height="52"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="textColor" name="000000"/>
+                                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                    </textField>
+                                                </subviews>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="15" bottom="0.0" trailing="13"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.98431372549999996" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="WLl-Ho-NLL" secondAttribute="trailing" id="22j-Yc-gVz"/>
+                                            <constraint firstAttribute="bottom" secondItem="WLl-Ho-NLL" secondAttribute="bottom" id="2Jq-cw-s6F"/>
+                                            <constraint firstItem="WLl-Ho-NLL" firstAttribute="top" secondItem="F9C-nN-Tyn" secondAttribute="top" id="820-xa-Qiv"/>
+                                            <constraint firstItem="WLl-Ho-NLL" firstAttribute="leading" secondItem="F9C-nN-Tyn" secondAttribute="leading" id="Ry1-pH-79f"/>
+                                            <constraint firstAttribute="height" constant="52" id="vDA-jG-1oF"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                <color key="value" red="0.26274509800000001" green="0.28627450980000002" blue="0.41568627450000001" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                <size key="value" width="0.0" height="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                <real key="value" value="0.75"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                <real key="value" value="7.5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="pNK-F3-8Sz" secondAttribute="bottom" id="0yr-U0-7aj"/>
+                                    <constraint firstAttribute="trailing" secondItem="pNK-F3-8Sz" secondAttribute="trailing" id="45k-HR-qpZ"/>
+                                    <constraint firstItem="pNK-F3-8Sz" firstAttribute="top" secondItem="QKB-dq-D2t" secondAttribute="top" id="G5G-y5-z6d"/>
+                                    <constraint firstAttribute="bottom" secondItem="F9C-nN-Tyn" secondAttribute="bottom" constant="26" id="VEj-Yf-WdJ"/>
+                                    <constraint firstItem="F9C-nN-Tyn" firstAttribute="leading" secondItem="QKB-dq-D2t" secondAttribute="leading" constant="20" id="XVf-LQ-5Dv"/>
+                                    <constraint firstItem="pNK-F3-8Sz" firstAttribute="leading" secondItem="QKB-dq-D2t" secondAttribute="leading" id="w7j-lP-0ak"/>
+                                    <constraint firstAttribute="trailing" secondItem="F9C-nN-Tyn" secondAttribute="trailing" constant="20" id="wfr-7Q-5bC"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="s6X-Dd-Nlw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="noi-Uq-5uH" firstAttribute="top" secondItem="ghf-au-lS9" secondAttribute="top" id="9FX-0b-QHj"/>
+                            <constraint firstAttribute="bottom" secondItem="noi-Uq-5uH" secondAttribute="bottom" id="9IQ-ef-2uw"/>
+                            <constraint firstItem="QKB-dq-D2t" firstAttribute="trailing" secondItem="s6X-Dd-Nlw" secondAttribute="trailing" id="BdB-8A-eFm"/>
+                            <constraint firstItem="QKB-dq-D2t" firstAttribute="leading" secondItem="s6X-Dd-Nlw" secondAttribute="leading" id="F0U-cT-d1r"/>
+                            <constraint firstItem="s6X-Dd-Nlw" firstAttribute="trailing" secondItem="noi-Uq-5uH" secondAttribute="trailing" id="KEk-Lo-HGY"/>
+                            <constraint firstItem="noi-Uq-5uH" firstAttribute="leading" secondItem="s6X-Dd-Nlw" secondAttribute="leading" id="jd8-wl-Fi2"/>
+                            <constraint firstItem="QKB-dq-D2t" firstAttribute="top" secondItem="ghf-au-lS9" secondAttribute="top" id="qll-SA-uEn"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2zV-Jd-2n5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2401" y="65"/>
         </scene>
     </scenes>
     <resources>
@@ -497,6 +610,7 @@
         <image name="ic_camera" width="25" height="20"/>
         <image name="ic_notifs" width="17" height="18"/>
         <image name="ic_shadowMap" width="375" height="287"/>
+        <image name="ic_topShadow" width="375" height="174"/>
         <namedColor name="000000">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
